--- a/templates/fbpost.html
+++ b/templates/fbpost.html
@@ -59,14 +59,18 @@
         </div>
         <div class="row center-main">
             <div class="col">
-                <button class="button button-small button-positive history">
-                    New Post
-                </button>
+                <a href="#/app/suggestpost">
+                    <button class="button button-small button-positive history">
+                        New Post
+                    </button>
+                </a>
             </div>
             <div class="col">
-                <button class="button button-small button-positive history">
-                    History
-                </button>
+                <a href="#/app/postinfofb">
+                    <button class="button button-small button-positive history">
+                        History
+                    </button>
+                </a>
             </div>
         </div>
         <div class="box-slider">
@@ -78,7 +82,7 @@
                                 <div class="item item-text-wrap">
                                     <img src="img/fbpost.jpg">
 
-                                    <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                                    <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                                     <h4>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h4>
@@ -94,7 +98,7 @@
                                 <div class="item item-text-wrap">
                                     <img src="img/fbpost.jpg">
 
-                                    <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                                    <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                                     <h4>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h4>
@@ -109,7 +113,7 @@
                             <div class="card">
                                 <div class="item item-text-wrap">
                                     <img src="img/fbpost.jpg">
-                                    <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                                    <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                                     <h4>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h4>
