--- a/templates/postfb.html
+++ b/templates/postfb.html
@@ -24,7 +24,7 @@
                         <h3>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h3>
-                        <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                        <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                         <h3>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h3>
-                        <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                        <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                         <h3>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h3>
-                        <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                        <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         <h3>
                             Let's enlighten ourselves with some wise words by a tech visionsry who achieved his dream.
                             </h3>
-                        <button class="button icon-left ion-social-facebook button-postfb">Post to Facebook</button>
+                        <button class="button icon-left ion-social-facebook button-postfb">Post</button>
                     </div>
                 </div>
             </div>
