--- a/templates/twitterpost.html
+++ b/templates/twitterpost.html
@@ -59,14 +59,18 @@
         </div>
         <div class="row center-main">
             <div class="col">
-                <button class="button button-small button-positive history">
-                    New Post
-                </button>
+                <a href="#/app/suggestpost">
+                    <button class="button button-small button-positive history">
+                        New Post
+                    </button>
+                </a>
             </div>
             <div class="col">
-                <button class="button button-small button-positive history">
-                    History
-                </button>
+                <a href="#/app/postinfo">
+                    <button class="button button-small button-positive history">
+                        History
+                    </button>
+                </a>
             </div>
         </div>
         <div class="box-slider">
