--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,6 +27,7 @@
                     </div>
                 </div>
                 <div class="profile-contmain">
+
                     <div class="profile-contmain1">
                         <p class="rank-score">
                             <span class="ranks">Rank <span class="score"> 1 </span></span>
@@ -42,18 +43,11 @@
                             <span class="dob-title">28/04/1987 |</span>
                             <span class="std"> Studied at IBSR, Mumbai</span>
                         </p>
-                    </div>
-                    <div class="maintriangle">
-                        <div class="tri-grp">
-                            <div class="triangle"></div>
-                            <div class="triangle1"></div>
-                        </div>
-                        <div class="tri-grp1">
-                            <div class="triangle2"></div>
-                            <div class="triangle3"></div>
 
-                        </div>
                     </div>
+                </div>
+                <div class="tri-grp">
+                    <i class="icon ion-chevron-down"></i>
                 </div>
             </div>
 
