--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,8 +1,8 @@
 <ion-view>
     <ion-content>
         <div class="edit-header">
-            <button class="button button-icon icon ion-close-round"></button>
-            <button class="button button-icon icon ion-checkmark"></button>
+            <button class="button button-icon icon ion-close-round brf"></button>
+            <button class="button button-icon icon ion-checkmark brf"></button>
         </div>
         <div class="img-profile">
             <div class="pic-edit">
