--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
         <div class="head-lead">
@@ -11,9 +11,9 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue">
+            <button class="button button-icon button-clear ion-edit post-icon blue brf">
             </button>
-            <button class="button button-icon button-clear ion-search menu-btncolor green blue">
+            <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -38,18 +38,6 @@
                                 <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
                             </div>
-                            <div class="row like-comnt">
-                                <div class=" col tab-items1">
-                                    <a>
-                                        <i class="iicon hrt-icon"></i> 1
-                                    </a>
-                                </div>
-                                <div class="col tab-items2">
-                                    <a>
-                                        <i class="iicon retweet"></i> 1
-                                    </a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </ion-slide>
@@ -66,18 +54,6 @@
                                 <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
                             </div>
-                            <div class="row like-comnt">
-                                <div class=" col tab-items1">
-                                    <a>
-                                        <i class="iicon hrt-icon"></i> 1
-                                    </a>
-                                </div>
-                                <div class="col tab-items2">
-                                    <a>
-                                        <i class="iicon retweet"></i> 1
-                                    </a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </ion-slide>
@@ -93,18 +69,6 @@
                             <div class="postinfo">
                                 <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
-                            </div>
-                            <div class="row like-comnt">
-                                <div class=" col tab-items1">
-                                    <a>
-                                        <i class="iicon hrt-icon"></i> 1
-                                    </a>
-                                </div>
-                                <div class="col tab-items2">
-                                    <a>
-                                        <i class="iicon retweet"></i> 1
-                                    </a>
-                                </div>
                             </div>
                         </div>
                     </div>
