--- a/templates/postinfofb.html
+++ b/templates/postinfofb.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
         <div class="head-lead">
@@ -11,9 +11,9 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue">
+            <button class="button button-icon button-clear ion-edit post-icon blue brf">
             </button>
-            <button class="button button-icon button-clear ion-search menu-btncolor green blue">
+            <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -34,17 +34,6 @@
                             <div class="postinfofb">
                                 <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
                             </div>
-                            <div class="row like-comnt">
-                                <div class="col">
-                                    <i class="iicon hrt-icon"></i>5
-                                </div>
-                                <div class="col">
-                                    <i class="iicon icon-comment"></i>2
-                                </div>
-                                <div class="col">
-                                    <i class="iicon ion-shares"></i>1
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </ion-slide>
@@ -56,17 +45,6 @@
                         <div class="postinfofb">
                             <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
                         </div>
-                        <div class="row like-comnt">
-                            <div class="col">
-                                <i class="iicon hrt-icon"></i>5
-                            </div>
-                            <div class="col">
-                                <i class="iicon icon-comment"></i>2
-                            </div>
-                            <div class="col">
-                                <i class="iicon ion-shares"></i>1
-                            </div>
-                        </div>
                     </div>
                 </ion-slide>
                 <ion-slide>
@@ -76,21 +54,23 @@
                         </div>
                         <div class="postinfofb">
                             <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
-                        </div>
-                        <div class="row like-comnt">
-                            <div class="col">
-                                <i class="iicon hrt-icon"></i>5
-                            </div>
-                            <div class="col">
-                                <i class="iicon icon-comment"></i>2
-                            </div>
-                            <div class="col">
-                                <i class="iicon ion-shares"></i>1
-                            </div>
                         </div>
                     </div>
                 </ion-slide>
             </ion-slide-box>
+        </div>
+        <div class="bar bar-footer">
+            <div class="row like-comnt">
+                <div class="col">
+                    <i class="iicon hrt-icon"></i>5
+                </div>
+                <div class="col">
+                    <i class="iicon icon-comment"></i>2
+                </div>
+                <div class="col">
+                    <i class="iicon ion-shares"></i>1
+                </div>
+            </div>
         </div>
 
     </ion-content>
