--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,11 +3,11 @@
         <ion-nav-back-button>
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-gear-a menu-btncolor">
+            <button class="button button-icon button-clear ion-gear-a menu-btncolor brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
