--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
         <div class="head-lead">
@@ -11,9 +11,9 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue">
+            <button class="button button-icon button-clear ion-edit post-icon blue brf">
             </button>
-            <button class="button button-icon button-clear ion-search menu-btncolor green blue">
+            <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
