--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button>
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
