--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left" class="border-color">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
         <div class="head-lead">
@@ -11,7 +11,7 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-search post-icon blue">
+            <button class="button button-icon button-clear ion-search post-icon blue brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -172,24 +172,27 @@
                     </div>
                 </div>
             </div>
-            <div class="row like-comnt leader">
-                <div class="col col-33 bod-right">
-                    <h5>
+            <div class="bar bar-footer">
+                <div class="row like-comnt leader">
+                    <div class="col col-33 bod-right">
+                        <h5>
                  #1
                 </h5>
-                </div>
-                <div class="col col-33 bod-right">
-                    <h5>
+                    </div>
+                    <div class="col col-33 bod-right">
+                        <h5>
                 Lauren Paul
                 </h5>
-                </div>
-                <div class="col col-33 bod-right">
-                    <h5 class="score-tot">
+                    </div>
+                    <div class="col col-33 bod-right">
+                        <h5 class="score-tot">
                         <i class="icon-star icon-str"></i>
                 850
                 </h5>
+                    </div>
                 </div>
             </div>
+
         </div>
     </ion-content>
 </ion-view>
