--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
             <ion-nav-back-button class="green">
             </ion-nav-back-button>
             <ion-nav-buttons side="left" class="border-color">
-                <button class="button button-icon button-clear ion-navicon menu-btncolor green" menu-toggle="left">
+                <button class="button button-icon button-clear ion-navicon menu-btncolor green brf" menu-toggle="left">
                 </button>
             </ion-nav-buttons>
             <div class="head-lead">
@@ -12,7 +12,7 @@
                 <hr class="verticalup">
             </div>
             <ion-nav-buttons side="right">
-                <button class="button button-icon button-clear ion-edit post-icon">
+                <button class="button button-icon button-clear ion-edit post-icon brf">
                 </button>
             </ion-nav-buttons>
         </ion-nav-bar>
