--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left" class="border-color">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
         <div class="head-lead">
@@ -11,7 +11,7 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-close post-icon blue">
+            <button class="button button-icon button-clear ion-close post-icon blue brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
