--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -3,22 +3,22 @@
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
+        <ion-nav-buttons side="right">
+            <button class="button button-icon button-clear ion-edit post-icon blue brf">
+            </button>
+            <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            </button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
+    <ion-content>
         <div class="head-lead">
             <i class="iicons ion-fb1"></i>
             <h4>Facebook</h4>
             <hr class="verticalup">
         </div>
-        <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue">
-            </button>
-            <button class="button button-icon button-clear ion-search menu-btncolor green blue">
-            </button>
-        </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-content>
         <div class="tables">
             <div class="row">
                 <div class="col">
