--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -70,10 +70,25 @@
                                 <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
                             </div>
+
                         </div>
                     </div>
                 </ion-slide>
             </ion-slide-box>
+        </div>
+        <div class="bar bar-footer">
+            <div class="row like-comnt">
+                <div class=" col tab-items1">
+                    <a>
+                        <i class="iicon hrt-icon"></i> 1
+                    </a>
+                </div>
+                <div class="col tab-items2">
+                    <a>
+                        <i class="iicon retweet"></i> 1
+                    </a>
+                </div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
