--- a/css/style.css
+++ b/css/style.css
@@ -1530,11 +1530,9 @@ span.lead-score {
 }
 
 .like-comnt.leader {
-    padding: 0px 0 0px 0px;
-    margin: 0 0 0px 0px;
-    height: 35px;
     position: relative;
     bottom: 0px;
+    padding: 0;
 }
 
 .bod-right {
